syntax = "proto3";
package ClanNetwork.clannetwork.claim.v1beta1;

option go_package = "github.com/ClanNetwork/clan-network/x/claim/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message ClaimEthRecord {
  // address of claim user
  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin initial_claimable_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_claimable_amount\""
  ];

  // true if action is completed
  bool completed = 3 [
    (gogoproto.moretags) = "yaml:\"completed\""
  ];
  
}
